[gd_scene load_steps=3 format=3 uid="uid://bmkjtj2yd52j6"]

[ext_resource type="LabelSettings" uid="uid://cwkbjts086b8f" path="res://main.tres" id="1_n4gnt"]
[ext_resource type="Script" path="res://lp_4_3.gd" id="1_v1m5r"]

[node name="LP4-3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1m5r")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 67.0
offset_right = 962.0
offset_bottom = 154.0
text = "Enter Number of Egg Wanted"
label_settings = ExtResource("1_n4gnt")

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 181.0
offset_top = 165.0
offset_right = 916.0
offset_bottom = 494.0
text = "-"
label_settings = ExtResource("1_n4gnt")

[node name="txtInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 52.0
offset_right = 968.0
offset_bottom = 115.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 515.0
offset_right = 341.0
offset_bottom = 594.0
text = "Enter"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 519.0
offset_right = 664.0
offset_bottom = 598.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 698.0
offset_top = 520.0
offset_right = 952.0
offset_bottom = 599.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
